# RustEducation

./: .gitignore  TestFile.txt
.github/workflows/: rust.yml
Education1/: Cargo.toml
Education1/src/: main.rs
IllsonProject/: .env  Cargo.toml
IllsonProject/src/: README.md  api.rs  bot.rs  config.rs  db.rs  main.rs
IllsonProject/src/html/: index.html
