[package]
name = "IllsonProject"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
http = "1.2.0"
serde = { version = "1.0.218", features = ["derive"] }
tracing-subscriber = "0.3.19"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.31"
teloxide = { version = "0.13", features = ["macros"] }
tokio-postgres = "0.7.13"
tracing = "0.1.41"
deadpool-postgres = "0.14.1"
dotenvy = "0.15"
envy = "0.4"
tower-http = { version = "0.6.2", features = ["trace"] }
